fixed font-sizing on smaller screens

--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -13,33 +13,32 @@ footer
   div.mmmeta
     margin-top: 1em
     h1, p
-      font-size: percentage(14/16)
-      text-align: center
+      font-size: 1em
       color: $mix-color
-    p
       text-align: center
-      color: $mix-color
-      &.copyright
-        font-size: percentage(14/16)
-      &.fortune::before
+    p.fortune
+      &::before
         content: "\201C"
-      &.fortune::after
+      &::after
         content: "\201D"
-  ul
-    display: flex
-    flex-direction: column
-    align-items: center
-    justify-content: center
-    margin: 0
-    list-style-type: none
-    li
-      color: $mix-color
+    ul
+      display: flex
+      flex-direction: column
+      align-items: center
+      justify-content: center
+      margin: 0
+      list-style-type: none
+      li
+        color: $mix-color
 
 //-----------------------------------------------------------------------------
 
 @media screen and (min-width: 34em)
 
-  footer
+  footer div.mmmeta
+    text-align: center
+    h1, p
+      font-size: percentage(14/16)
     ul
       flex-direction: row
       li
